Fixed Rocket League link opening in new tab, minimal spacing added between icons and text

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ html, body {
 }
 
 .no-list-deco img {
-    margin-right: 2px;
+    margin-right: 4px;
 }
 
 .left-game-image {
